# ict_strategy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: econ_calendar.csv  econ_calendar_sources.md  fetch_btc.py  fetch_databento.py  fetch_nq.py
data/cache/: es_1m.csv  nq_1m.csv
docs/strategy/: btc-short-research-spec.md  decision-log-schema.md  detector-definitions.md  ict-strategy-spec.md  ny-window-research-spec.md
engine/backtest/: decision_log.py  gen_replay.py  runner.py
engine/core/: sessions.py  types.py
engine/data/: loader.py
engine/detectors/: displacement.py  fvg.py  mss.py  pools.py  ranges.py  smt.py  swings.py
engine/model/: bias.py  config.py  gapgo.py  orb.py  strategy.py
engine/sim/: __init__.py  broker.py  orders.py  risk.py
reports/: btc-short-report-2026-07-03.md  is_sweep.json  is_sweep_round2.json  is_sweep_round3.json  london_nq_eval.json  oos_exam.json  orb_gate_eval.json  session_eval.json  strategy-report-2026-06-13.md  window-report-2026-07-02.md
reports/btc_runs/: is_C1_carry.csv  is_C2_momentum.csv  is_C3_orb.csv  is_c3_trades.csv  is_summary.txt  (+1 more)
research/: fetch_transcripts.py  retry_missing.py
tests/: test_bias.py  test_broker.py  test_btc_backtest.py  test_displacement.py  test_fvg.py  test_gapgo.py  test_loader.py  test_mss.py  test_no_lookahead.py  test_orb.py  test_pools.py  test_ranges.py  test_risk.py  test_runner.py  test_sessions.py  test_sessions_config.py  test_smt.py  test_strategy.py  test_swings.py  test_types.py
web/: README.md  index.html  make_demo_data.py  serve.py  style.css
(+170 files in other folders)
